# pilla-compiler

./: .gitignore  CMakeLists.txt  output.ll  output.s  output_types.ll  pilla  walkthrough.md
boiler_plates/: README.md
boiler_plates/codegen/: Codegen.md  MachineCodeGeneration.md
boiler_plates/lexer/: Lexer.md  Lexer.txt  Token.md  Tokens.txt
boiler_plates/parser/: AST.md  Parser.md
boiler_plates/sema/: Sema.md
docs/: control_flow_design.md  parser_refactoring.md
include/codegen/: Codegen.h
include/lexer/: Lexer.h  Token.h
include/parser/: AST.h  ASTPrinter.h  Parser.h
include/passes/: pass1.h  pass2.h
include/sema/: Sema.h
src/: main.cpp
src/codegen/: Codegen.cpp
src/lexer/: Lexer.cpp  Token.cpp
src/parser/: ASTPrinter.cpp  Parser.cpp
src/passes/: pass1.cpp  pass2.cpp
src/sema/: Sema.cpp
test/: ex.cpp  ex.pilla  ex.txt  exx.txt  test.ll  test_binary_ops.pilla  test_comparisons.pilla  test_float_ops.pilla  test_if_else.pilla  test_precedence.pilla  types.txt
tests/: test_comprehensive.pilla  test_for.pilla  test_nested_loops.pilla  test_printf.pilla  test_while.pilla
